--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,8 @@
 :root {
   --main-font-family: 'Roboto', sans-serif;
   --secondary-font-family: 'Raleway', sans-serif;
+  --logo-color: color #2e2f42;
+  --portfolio-text-color: color #434455;
 }
 
 .list {
@@ -14,8 +16,11 @@ button {
   font-family: inherit;
   cursor: pointer;
 }
+
 body {
   font-family: var(--main-font-family);
+  color: var(--portfolio-text-color);
+  background-color: #ffffff;
 }
 
 .menu-link {
@@ -80,7 +85,7 @@ body {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #2e2f42;
+  color: var(--logo-color);
 }
 .logo-light {
   color: #f4f4fd;
@@ -100,6 +105,7 @@ body {
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
+  text-align: center;
   color: #ffffff;
 }
 
@@ -108,6 +114,7 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
+  letter-spacing: 0.04em;
   color: #ffffff;
   background: #4d5ae5;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -143,6 +150,8 @@ body {
   font-size: 36px;
   line-height: 1.11;
   color: #2e2f42;
+  text-align: center;
+  letter-spacing: 0.02em;
   text-transform: capitalize;
 }
 
@@ -159,3 +168,10 @@ body {
   color: #f4f4fd;
 }
 
+.address-style {
+  font-style: normal;
+}
+
+.team-list {
+  background-color: #ffffff;
+}
