--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,10 @@
 :root {
   --main-font-family: 'Roboto', sans-serif;
   --secondary-font-family: 'Raleway', sans-serif;
-  --logo-color: color #2e2f42;
-  --portfolio-text-color: color #434455;
+  --logo-color: #4d5ae5;
+  --portfolio-text-color: #434455;
+  --color-studio: #2e2f42;
+  --page-background: #ffffff;
 }
 
 .list {
@@ -18,9 +20,9 @@ button {
 }
 
 body {
-  font-family: var(--main-font-family);
-  color: var(--portfolio-text-color);
-  background-color: #ffffff;
+  font-family: 'Roboto', sans-serif;
+  color:var(--portfolio-text-color);
+  background-color: var(--page-background);
 }
 
 .menu-link {
@@ -52,15 +54,7 @@ body {
   background: #404bbf;
 }
 
-.contact-tel {
-  font-weight: 400;
-  font-style: normal;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #434455;
-}
-.contact-mail {
+.contacts-style {
   font-weight: 400;
   font-style: normal;
   font-size: 16px;
@@ -69,12 +63,8 @@ body {
   color: #434455;
 }
 
-.contact-tel:hover,
-.contact-tel:focus {
-  color: #404bbf;
-}
-.contact-mail:hover,
-.contact-mail:focus {
+.contacts-style:hover,
+.contacts-style:focus {
   color: #404bbf;
 }
 
@@ -85,14 +75,14 @@ body {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: var(--logo-color);
+  color:var(--logo-color);
 }
-.logo-light {
+.accent-footer {
   color: #f4f4fd;
 }
 
 .accent {
-  color: #4d5ae5;
+  color: var(--color-studio);
 }
 
 .back-color-hero {
